--- a/DigitalImageProcessing/Resize.ipynb
+++ b/DigitalImageProcessing/Resize.ipynb
@@ -31,11 +31,12 @@
     "        nom = os.path.splitext(path)[0]\n",
     "        im = cv2.imread(path)\n",
     "        height, width, depth = im.shape\n",
-    "        widthcutoff = width // 2\n",
-    "        s1 = im[:, :widthcutoff]\n",
-    "        cv2.imwrite(OutputPath + path + \"_left.jpeg\", s1)\n",
-    "        s2 = im[:, widthcutoff:]\n",
-    "        cv2.imwrite(OutputPath + path + \"_right.jpeg\", s2)"
+    "        if width > height :\n",
+        "        widthcutoff = width // 2\n",
+        "        s1 = im[:, :widthcutoff]\n",
+        "        cv2.imwrite(OutputPath + path + \"_left.jpeg\", s1)\n",
+        "        s2 = im[:, widthcutoff:]\n",
+        "        cv2.imwrite(OutputPath + path + \"_right.jpeg\", s2)"
    ]
   },
   {
