--- a/DigitalImageProcessing/Resize.ipynb
+++ b/DigitalImageProcessing/Resize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,28 +24,45 @@
     "    The separation between the two pages needs to be centred in order for this function results to be useable afterwards.\n",
     "    \"\"\"\n",
     "    \n",
+    "    # On crée la liste des chemins de chaque fichiers contenus dans notre dossiers se terminant par l'extension .tif\n",
     "    pathlist = Path(RelativePathSource).glob('*tif')\n",
-    "\n",
+    "    \n",
+    "    # On boucle dans cette liste :\n",
     "    for path in pathlist :\n",
+    "        \n",
+    "        # On convertit l'objet path en chaine de caractères :\n",
     "        path = str(path)\n",
-    "        nom = os.path.splitext(path)[0]\n",
+    "        \n",
+    "        # Du chemin, on extrait le nom du fichier avec l'extension puis sans l'extension.\n",
+    "        file = os.path.basename(path)\n",
+    "        fileName = os.path.splitext(file)[0]\n",
+    "        \n",
+    "        # On lit l'image.\n",
     "        im = cv2.imread(path)\n",
+    "        \n",
+    "        # On attribue les dimensions de l'image à des variables.\n",
     "        height, width, depth = im.shape\n",
+    "        \n",
+    "        # On pose une condition : si la largeur est plus grande que la hauteur :\n",
     "        if width > height :\n",
+    "            \n",
+    "            # On crée une variable qui équivaut à la moitié de la largeur.\n",
     "            widthcutoff = width // 2\n",
+    "            \n",
+    "            # On crée des images qui correspondent respectivement à la moitié gauche et droite de l'image et on les sauvegarde dans le fichier cible.\n",
     "            s1 = im[:, :widthcutoff]\n",
-    "            cv2.imwrite(OutputPath + path + \"_left.jpeg\", s1)\n",
+    "            cv2.imwrite(OutputPath + fileName + \"_left.jpeg\", s1)\n",
     "            s2 = im[:, widthcutoff:]\n",
-    "            cv2.imwrite(OutputPath + path + \"_right.jpeg\", s2)"
+    "            cv2.imwrite(OutputPath + fileName + \"_right.jpeg\", s2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PagesDivider('./', './traite/')"
+    "PagesDivider('./../', './../traite/')"
    ]
   }
  ],
