Modifications sur le script csv2ead.

--- a/Kaliope/CSV2EAD/CSV2EAD.ipynb
+++ b/Kaliope/CSV2EAD/CSV2EAD.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,17 @@
     "    DateEd2 = datetime.today().strftime('%d-%m-%Y')\n",
     "    MentionnedPers = []\n",
     "    for i in range (0,len(row.WeitPersonen)-1) :\n",
-    "        MentionnedPers.append('<persname role=\"Erwähnte Person\" source=\"GND\" authfilenumber=\"%s\">%s</persname>' %(row.WeitPersonen[i],row.WeitPersonenID[i]))\n",
+    "        MentionnedPers.append('<persname role=\"Erwähnte Person\" source=\"GND\" authfilenumber=\"%s\" normal=\"%s\">%s</persname>' %(row.WeitPersonenID[i],row.WeitPersonen[i], row.WeitPersonen[i]))\n",
     "    \n",
-    "    return ('<c level=\"class\" id=\"%s\" audience=\"external\">' %(row.Key) \n",
+    "    MentionnedKorp = []\n",
+    "    for i in range(0,len(row.Korperschaften)-1) :\n",
+    "        MentionnedKorp.append('<corpname role=\"Erwähnte Körperschaft\" source=\"GND\" authfilenumber=\"%s\" normal=\"%s\">%s</corpname>' %(row.KorperschaftenID[i], row.Korperschaften[i], row.Korperschaften[i]))\n",
+    "    \n",
+    "    MentionnedSub = []\n",
+    "    for i in range(0, len(row.Subject)-1) :\n",
+    "        MentionnedSub.append ('<subject source=\"GND\" authfilenumber=\"%s\">%s</subject>' %(row.SubjectID, row.Subject))\n",
+    "    \n",
+    "    return ('<c level=\"file\" id=\"%s\" audience=\"external\">' %(row.Key) \n",
     "            #+ '<did><repository><corpname role=\"Aufbewahrungsort\">%s</corpname></repository>' %(row.Bestand)\n",
     "            #+ '<origination><persname role=\"Bestandsbildner\" source=\"GND\" authfilenumber=\"%s\">' %(row.BestandsbildnerID)\n",
     "            #+ '%s</persname></origination>' %(row.Bestandsbildner)\n",
@@ -89,25 +97,31 @@
     "            + '<arrangement><head>Ordnungszustand</head><p>Katalogisiert</p></arrangement>'\n",
     "            + '<bibliography><head>Bibliographie</head><bibliography><head>Editionshinweise</head><p>%s</p></bibliography>' %(row.Zitierempfehlung)\n",
     "            + '<controlaccess><head>Personen</head>'\n",
-    "            + ''.join(MentionnedPers))\n",
-    "        "
+    "            + ''.join(MentionnedPers)\n",
+    "            + '</controlaccess><controlaccess><head>Körperschaften</head>'\n",
+    "            + ''.join(MentionnedKorp)\n",
+    "            + '</controlaccess><controlaccess><head>Sachschlagwörter</head>'\n",
+    "            + ''.join(MentionnedSub)\n",
+    "            + '<scopecontent><head>Inhaltsangabe</head><p>%s</p></scopecontent>' %(row.Inhaltsangabe)\n",
+    "            + '<userestrict><head>Benutzungsbeschränkung</head><p>This file is licensed under the terms of the Creative-Commons-License CC-BY 4.0</p></userestrict></p>'\n",
+    "           )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<c level=\"class\" id=\"222\" audience=\"external\">20210728\">28-07-2021</unitdate><physdesc label=\"Angaben zum Material\"><extent label=\"Umfang\">4</extent><physfacet label=\"Erhaltungszustand\">ja</physfacet><physloc label=\"Standort\">234</physloc><dao xlink:type=\"simple\" xlink:href=\"https://constance-de-salm.de/archiv/#/document/2994\" xlink:title=\"URL 222\" xlink:show=\"embed\" xlink:actuate=\"onLoad\"/></did><accessrestrict><head>Sperrvermerk</head><p>Benutzbar</p></accessrestrict><arrangement><head>Ordnungszustand</head><p>Katalogisiert</p></arrangement><bibliography><head>Bibliographie</head><bibliography><head>Editionshinweise</head><p>C08/S68/111-112. In: Die Korrespondenz der Constance de Salm (1767-1845). Inventar des Fonds Salm der Société des Amis du Vieux Toulon et de sa Région und des Bestands Constance de Salm im Archiv Schloss Dyck (Mitgliedsarchiv der Vereinigten Adelsarchive im Rheinland e.V.). Elektronische Edition, DHI Paris 2020. https://constance-de-salm.de/archiv/#/document/2994</p></bibliography><controlaccess><head>Personen</head><persname role=\"Erwähnte Person\" source=\"GND\" authfilenumber=\"Sobry, Jean-François\">192</persname>\n"
+      "<c level=\"item\" id=\"222\" audience=\"external\">20210730\">30-07-2021</unitdate><physdesc label=\"Angaben zum Material\"><extent label=\"Umfang\">4</extent><physfacet label=\"Erhaltungszustand\">ja</physfacet><physloc label=\"Standort\">234</physloc><dao xlink:type=\"simple\" xlink:href=\"https://constance-de-salm.de/archiv/#/document/2994\" xlink:title=\"URL 222\" xlink:show=\"embed\" xlink:actuate=\"onLoad\"/></did><accessrestrict><head>Sperrvermerk</head><p>Benutzbar</p></accessrestrict><arrangement><head>Ordnungszustand</head><p>Katalogisiert</p></arrangement><bibliography><head>Bibliographie</head><bibliography><head>Editionshinweise</head><p>C08/S68/111-112. In: Die Korrespondenz der Constance de Salm (1767-1845). Inventar des Fonds Salm der Société des Amis du Vieux Toulon et de sa Région und des Bestands Constance de Salm im Archiv Schloss Dyck (Mitgliedsarchiv der Vereinigten Adelsarchive im Rheinland e.V.). Elektronische Edition, DHI Paris 2020. https://constance-de-salm.de/archiv/#/document/2994</p></bibliography><controlaccess><head>Personen</head><persname role=\"Erwähnte Person\" source=\"GND\" authfilenumber=\"192\" normal=\"Sobry, Jean-François\">Sobry, Jean-François</persname></controlaccess><controlaccess><head>Körperschaften</head><corpname role=\"Erwähnte Körperschaft\" source=\"GND\" authfilenumber=\"6474\" normal=\"maison de la radio\">maison de la radio</corpname></controlaccess><controlaccess><head>Sachschlagwörter</head>\n"
      ]
     }
    ],
    "source": [
-    "print ('\\n'.join(importCSV('./../fichiertest.csv', ['WeitPersonen', 'WeitPersonenID']).apply(Csv2Cmi, axis=1)))"
+    "print ('\\n'.join(importCSV('./../fichiertest.csv', ['WeitPersonen', 'WeitPersonenID', 'Korperschaften', 'KorperschaftenID', 'Subject', 'SubjectID']).apply(Csv2Cmi, axis=1)))"
    ]
   },
   {
